# RAG_Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  README_zh.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.agent-harness/: 00_PROJECT_MAP.md  01_SERVICE_MAP.md  02_RAG_FLOW.md  03_DEV_COMMANDS.md  04_CHANGE_GUIDE.md  05_COMMON_TASKS.md  06_DEBUG_CHECKLIST.md  07_FAILURE_MEMORY.md  08_CODEX_HARNESS_ADAPTER.md  09_REVIEW_CHECKLIST.md  10_SYNC_POLICY.md
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
alembic/: env.py
app/: __init__.py  main.py
backups/: support_ai_2026-06-28.sql
doc/: archive-2026-06-28.md
docs/: 100条测试数据.md
frontend/: Dockerfile  Dockerfile.dev  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
nginx/: nginx.conf
outputs/: 张鉴豪-简历-RAG项目版.md
scripts/: add_python_strings_to_whmcs_sql.py  build_offline_eval_golden_set.py  crawl_whmcs_tickets.py  create_admin_user.py  debug_chunks_by_url.py  debug_normalizer.py  debug_qdrant.py  debug_retrieval_ip.py  debug_retrieval_zero_chunks.py  debug_search_open_ticket.py  delete_noti_tickets.py  docker-up.ps1  docker-up.sh  import_whmcs_sql_dump_to_tickets.py  ingest_from_source.py  ingest_tickets_from_source.py  init_db.py  init_db.sh  open-firewall-ports.ps1  reingest_all.py  requirements-login.txt  run_offline_eval.py  setup_login.ps1  setup_login.sh  (+2 more)
(+254 files in other folders)
